core/include/raft.h

typedef uint32_t RftError;
/**
 * Opaque prepared-collection handle.
 */
typedef struct RaftCollection RaftCollection;
/**
 * Opaque handle wrapping a [`Database`] and its async runtime.
 *
 * Allocated on the heap by [`rft_open`](super::rft_open) and freed by
 * [`rft_close`](super::rft_close). C callers treat it as `*mut c_void`.
 */
typedef struct RaftDb RaftDb;
/**
 * Opaque transaction handle.
 */
typedef struct RaftTransaction RaftTransaction;
/**
 * Opaque engine-owned byte buffer. Returned by [`rft_collection_scan`];
 * read it via [`rft_buf_data`] / [`rft_buf_len`] and release it with
 * [`rft_buf_free`]. One scan = one engine pass = four FFI crossings
 * total, regardless of document count.
 */
typedef struct RftBuf RftBuf;
/**
 * Open or create a database at `path`.
 *
 * Returns a non-null handle on success, or null on failure (check
 * `out_err` for the error code).
 *
 * # Safety
 *
 * - `path` must be a valid null-terminated UTF-8 C string.
 * - `out_err` must be a valid pointer to an `RftError`.
 */
struct RaftDb *rft_open(const char *path, RftError *out_err);
/**
 * Close and free a database handle. Aborts any pending observer tasks,
 * then blocks until the observer runtime has fully shut down — after
 * this returns, no observer callback will ever fire again, so the
 * caller may safely free any `user_data` it passed to `rft_observe`.
 *
 * # Safety
 *
 * - `db` must be a handle returned by [`rft_open`], or null (no-op).
 *   Passing an already-closed or foreign pointer is a safe no-op.
 * - No other thread may be using `db` concurrently with this call.
 * - Must not be called from inside an observer callback (deadlock).
 * - After this call, `db` is dangling and must not be used.
 */
void rft_close(struct RaftDb *db);
/**
 * Pointer to the buffer's bytes. Valid until [`rft_buf_free`].
 *
 * # Safety
 *
 * `buf` must be a live handle from [`rft_collection_scan`] (or null,
 * which yields null).
 */
const uint8_t *rft_buf_data(const struct RftBuf *buf);
/**
 * Length in bytes of the buffer. Null yields 0.
 *
 * # Safety
 *
 * `buf` must be a live handle from [`rft_collection_scan`] or null.
 */
uintptr_t rft_buf_len(const struct RftBuf *buf);
/**
 * Free a buffer handle. Null is a no-op. After this call the handle and
 * any pointer previously returned by [`rft_buf_data`] are dangling.
 *
 * # Safety
 *
 * `buf` must be a handle from [`rft_collection_scan`] not yet freed, or
 * null.
 */
void rft_buf_free(struct RftBuf *buf);
/**
 * Insert or update every document in `batch` (binary batch encoding)
 * atomically: one transaction, one WAL write, one fsync. Document ids
 * are honoured; repeated ids within the batch apply in order (last one
 * wins).
 *
 * The whole batch is validated before anything is written — a malformed
 * document rejects the entire call with no partial effects.
 *
 * # Safety
 *
 * - `db` must be a valid handle from [`rft_open`](super::rft_open).
 * - `collection` must be a valid null-terminated UTF-8 C string.
 * - `batch` must point to `batch_len` readable bytes (null only if
 *   `batch_len == 0`).
 */
RftError rft_collection_put_many(struct RaftDb *db,
                                 const char *collection,
                                 const uint8_t *batch,
                                 uintptr_t batch_len);
/**
 * Delete every id in `ids` atomically: one transaction, one WAL write,
 * one fsync. Missing ids are not an error (tombstones are written).
 *
 * # Safety
 *
 * - `db` must be a valid handle; `collection` a valid null-terminated
 *   UTF-8 C string.
 * - `ids` must point to `count` readable `u64`s (null only if
 *   `count == 0`).
 */
RftError rft_collection_delete_many(struct RaftDb *db,
                                    const char *collection,
                                    const uint64_t *ids,
                                    uintptr_t count);
/**
 * Read every document in `collection` in one call. On success writes a
 * new buffer handle (binary batch encoding, ids ascending) to
 * `*out_buf`; the caller owns it and must release it with
 * [`rft_buf_free`].
 *
 * # Safety
 *
 * - `db` must be a valid handle; `collection` a valid null-terminated
 *   UTF-8 C string; `out_buf` a writable `*mut *mut RftBuf`.
 */
RftError rft_collection_scan(struct RaftDb *db, const char *collection, struct RftBuf **out_buf);
/**
 * Fetch one document by id as binary codec bytes — the single-lookup
 * replacement for the two-phase JSON `rft_collection_get`. `*out_len`
 * carries the buffer capacity in and the written (or required) size
 * out; on `BufferTooSmall` nothing is copied and the caller retries
 * with a larger buffer (rare when reusing a sensibly-sized one).
 *
 * # Safety
 *
 * - `db` must be a valid handle; `collection` a valid null-terminated
 *   UTF-8 C string.
 * - `out_len` must be a valid `*mut usize`; `out_buf` must point to
 *   `*out_len` writable bytes (or be null to only query the size).
 */
RftError rft_collection_get_buf(struct RaftDb *db,
                                const char *collection,
                                uint64_t doc_id,
                                uint8_t *out_buf,
                                uintptr_t *out_len);
/**
 * Open a prepared handle for `collection` (creating the collection entry
 * if it does not exist yet). The handle caches the validated name and the
 * collection's generation counter.
 *
 * # Safety
 *
 * - `db` must be a valid handle from [`rft_open`](super::rft_open).
 * - `collection` must be a valid null-terminated UTF-8 C string.
 * - `out_coll` must be a writable `*mut *mut RaftCollection`.
 * - The returned handle must be closed with [`rft_collection_close`]
 *   **before** `db` is closed.
 */
RftError rft_collection_open(struct RaftDb *db,
                             const char *collection,
                             struct RaftCollection **out_coll);
/**
 * Close a prepared collection handle. Null or already-closed handles are
 * safe no-ops.
 *
 * # Safety
 *
 * - After this call the handle — and any generation pointer obtained from
 *   it — is dangling and must not be used.
 */
void rft_collection_close(struct RaftCollection *coll);
/**
 * Stable pointer to the collection's mutation-generation counter. The
 * value increments on every document write or delete in the collection,
 * through any write path. Bindings read it with a plain (aligned 64-bit)
 * load; entries cached at generation G stay valid while it still reads G.
 *
 * Returns null for an invalid handle.
 *
 * # Safety
 *
 * - `coll` must be a live handle; the pointer is valid until
 *   [`rft_collection_close`].
 */
const uint64_t *rft_coll_generation(struct RaftCollection *coll);
/**
 * Point read through a prepared handle: one lookup, zero heap allocation
 * (thread-local scratch), binary-codec payload. Buffer semantics match
 * [`rft_collection_get_buf`](super::rft_collection_get_buf).
 *
 * # Safety
 *
 * - `coll` must be a live handle whose database is still open.
 * - `out_len` must be a valid `*mut usize`; `out_buf` must point to
 *   `*out_len` writable bytes (or be null to query the size).
 */
RftError rft_coll_get_buf(struct RaftCollection *coll,
                          uint64_t doc_id,
                          uint8_t *out_buf,
                          uintptr_t *out_len);
/**
 * Batch point-read: fetch every id in `ids` that exists, in one crossing
 * and one lock hold. On success writes a buffer handle (binary batch
 * encoding, input order, misses skipped) to `*out_buf`; release it with
 * [`rft_buf_free`](super::rft_buf_free).
 *
 * # Safety
 *
 * - `coll` must be a live handle whose database is still open.
 * - `ids` must point to `count` readable `u64`s (null only if `count`
 *   is 0); `out_buf` must be a writable `*mut *mut RftBuf`.
 */
RftError rft_coll_get_many(struct RaftCollection *coll,
                           const uint64_t *ids,
                           uintptr_t count,
                           struct RftBuf **out_buf);
/**
 * Insert or update a document in `collection`. The document's `id` field
 * is honoured. The same id always maps to the same slot — repeated puts
 * overwrite (and bump the internal version).
 *
 * # Safety
 *
 * - `db` must be a valid handle returned by [`rft_open`](super::rft_open).
 * - `collection` must be a valid null-terminated UTF-8 C string.
 * - `doc_json` must be a valid UTF-8 buffer of `doc_json_len` bytes.
 */
RftError rft_collection_put(struct RaftDb *db,
                            const char *collection,
                            const uint8_t *doc_json,
                            uintptr_t doc_json_len);
/**
 * Fetch a document by id, writing its JSON encoding to `out_buf`. On
 * `BufferTooSmall` the required size is written to `*out_len` and no
 * bytes are copied.
 *
 * # Safety
 *
 * - `db` must be a valid handle.
 * - `collection` must be a valid null-terminated UTF-8 C string.
 * - `out_buf` must be writable for `*out_len` bytes, or null to query
 *   the required size.
 * - `out_len` must be a valid `*mut usize`.
 */
RftError rft_collection_get(struct RaftDb *db,
                            const char *collection,
                            uint64_t doc_id,
                            uint8_t *out_buf,
                            uintptr_t *out_len);
/**
 * Delete a document. Returns [`RftError::Ok`] whether the document
 * existed or not.
 *
 * # Safety
 *
 * - `db` must be a valid handle.
 * - `collection` must be a valid null-terminated UTF-8 C string.
 */
RftError rft_collection_delete(struct RaftDb *db, const char *collection, uint64_t doc_id);
/**
 * Number of documents in `collection`. Writes the count to `*out_count`.
 *
 * # Safety
 *
 * - `db` must be a valid handle.
 * - `collection` must be a valid null-terminated UTF-8 C string.
 * - `out_count` must be a valid `*mut usize`.
 */
RftError rft_collection_count(struct RaftDb *db, const char *collection, uintptr_t *out_count);
/**
 * List all document ids in `collection`, sorted ascending.
 *
 * Writes up to `*out_len` ids into `out_ids` and sets `*out_len` to
 * the number written. If `out_ids` is null or `*out_len` is smaller
 * than the total count, returns [`RftError::BufferTooSmall`] and
 * `*out_len` holds the required size.
 *
 * # Safety
 *
 * - `db` must be a valid handle.
 * - `collection` must be a valid null-terminated UTF-8 C string.
 * - `out_ids` must be writable for `*out_len * 8` bytes, or null.
 * - `out_len` must be a valid `*mut usize`.
 */
RftError rft_collection_list_ids(struct RaftDb *db,
                                 const char *collection,
                                 uint64_t *out_ids,
                                 uintptr_t *out_len);
/**
 * Begin a new transaction. The caller takes ownership of the returned
 * handle and must end it with `commit` or `rollback`.
 *
 * # Safety
 *
 * - `db` must be a valid handle.
 * - `out_txn` must be a valid `*mut *mut RaftTransaction`.
 */
RftError rft_transaction_begin(struct RaftDb *db, struct RaftTransaction **out_txn);
/**
 * Buffer a write inside the transaction. Applied atomically on commit.
 *
 * # Safety
 *
 * - `txn` must be a valid handle returned by
 *   [`rft_transaction_begin`] and not yet finalised.
 * - `doc_json` must be a valid UTF-8 buffer of `doc_json_len` bytes.
 */
RftError rft_transaction_put(struct RaftTransaction *txn,
                             const char *collection,
                             const uint8_t *doc_json,
                             uintptr_t doc_json_len);
/**
 * Buffer a delete inside the transaction.
 *
 * # Safety
 *
 * - `txn` must be a valid, active handle.
 * - `collection` must be a valid null-terminated UTF-8 C string.
 */
RftError rft_transaction_delete(struct RaftTransaction *txn,
                                const char *collection,
                                uint64_t doc_id);
/**
 * Validate the read set and atomically apply all buffered changes.
 * Consumes the handle — it is freed regardless of outcome and must not
 * be used again.
 *
 * Returns:
 * - [`RftError::Ok`] on success.
 * - [`RftError::TransactionConflict`] if a tracked doc was modified
 *   concurrently. No writes are applied.
 *
 * # Safety
 *
 * - `txn` must be a valid, active handle. After this call, `txn` is
 *   freed and dangling.
 */
RftError rft_transaction_commit(struct RaftTransaction *txn);
/**
 * Discard the transaction without applying any buffered changes.
 * Consumes the handle.
 *
 * # Safety
 *
 * - `txn` must be a valid handle returned by
 *   [`rft_transaction_begin`], or null (no-op).
 * - After this call, `txn` is freed and dangling.
 */
void rft_transaction_rollback(struct RaftTransaction *txn);